Ensure all Products in Grid are aligned to top. Referencing #71

--- a/style.css
+++ b/style.css
@@ -4747,14 +4747,10 @@ ul[data-accordion-menu] > li:not(.menu-text) > ul {
 .customers .products-services-list {
   text-align: center; }
   .customers .products-services-list .queued-item {
-    display: table;
     padding: 0;
     visibility: hidden;
     -webkit-transition: ease all 300ms;
             transition: ease all 300ms; }
-    .customers .products-services-list .queued-item .content {
-      display: table-cell;
-      vertical-align: middle; }
     .customers .products-services-list .queued-item:hover {
       background-color: #005790; }
       .customers .products-services-list .queued-item:hover h1, .customers .products-services-list .queued-item:hover h2, .customers .products-services-list .queued-item:hover h3, .customers .products-services-list .queued-item:hover h4, .customers .products-services-list .queued-item:hover h5, .customers .products-services-list .queued-item:hover h6 {
